# novyx-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  mcp.json  pyproject.toml  server.json  smithery.yaml
.well-known/: mcp.json
novyx_mcp/: __init__.py  __main__.py  cloud_backend.py  local_backend.py  local_embeddings.py  local_schema.py  server.py  tool_registry.py
