[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novyx-mcp"
version = "2.5.2"
description = "Persistent memory + governance for AI agents. 119 MCP tools — core memory works locally (zero config SQLite), full surface (policy-as-code, approval workflows, governance dashboard, threat intel, auto-defense, governed actions, Runtime v2 agents/missions/capabilities) with Novyx Cloud."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Novyx Labs", email = "blake@novyxlabs.com"}
]
maintainers = [
    {name = "Novyx Labs", email = "blake@novyxlabs.com"}
]
keywords = [
    "mcp",
    "novyx",
    "memory",
    "ai",
    "agents",
    "claude",
    "claude-code",
    "claude-md",
    "model-context-protocol",
    "multi-agent",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    # novyx>=3.4.0 is required because cloud_backend delegates directly
    # to Runtime v2 SDK methods (create_agent, create_mission,
    # create_capability, create_checkpoint, create_intervention, and the
    # 20 other Runtime v2 methods). Those methods first landed in
    # novyx 3.1.0, but 3.4.0 is the first non-yanked version after the
    # 3.3.0/3.3.1 version-honesty yanks and is the version novyx-mcp
    # 2.5.1+ was tested against.
    "novyx>=3.4.0",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://novyxlabs.com"
Documentation = "https://docs.novyxlabs.com"

[project.scripts]
novyx-mcp = "novyx_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["novyx_mcp*"]

[tool.setuptools.package-data]
novyx_mcp = ["py.typed"]
